[package]
name = "loading_slide"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
vzglyd_slide = { package = "VRX-64-slide", git = "https://github.com/vzglyd/VRX-64-slide" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bytemuck = { version = "1", features = ["derive"] }
once_cell = "1"
postcard = { version = "1", features = ["alloc", "use-std"] }
font8x8 = "0.3"
heapless = "0.8"
